--- a/data_logger/templates/projects.html
+++ b/data_logger/templates/projects.html
@@ -40,11 +40,37 @@
             </div>
             <!-- /.box-body -->
             <div class="box-footer clearfix">
-              <a href="/app.py/add/project" class="btn btn-sm btn-info btn-flat pull-left">Add project</a>
+              <button data-toggle="modal" data-target="#projectModal" class="btn btn-sm btn-info btn-flat pull-left">Add project</button>
               <div class="pull-right">{{ project_list|length }} projects</div>
             </div>
           </div>
           <!-- /.box -->
 </div>
 
+
+
+<div class="modal fade" id="projectModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel" style='display:initial;'>Add project</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+        <div class="modal-body">
+            <form role="form" action="/app.py/add/project" method="post">
+                <div class="form-group">
+                    <label for="name">name</label>
+                    <!-- TODO éventuellement changer  l'id en 'email'-->
+                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter name">
+                </div>
+                  <input type="submit" class="btn btn-primary" value="add"></input>
+            <!-- /.box-body -->
+
+          </form>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
