--- a/data_logger/templates/404.html
+++ b/data_logger/templates/404.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
-<canvas id="canvasGame"  style="position:absolute;width:calc( 100% - 230px );height:calc( 100% - 50px );margin:-15px;">
+<canvas id="canvasGame"  style="position:absolute;width:calc( 100% - 230px );height:calc( 100% - 50px );margin:-15px;margin-top:-56px;">
 </canvas>
 <div class="col-md-6 col-md-push-3">
 <div class="callout callout-danger">
