--- a/data_logger/templates/login.html
+++ b/data_logger/templates/login.html
@@ -1,38 +1,37 @@
 {% extends "base.html" %}
 {% block body %}
-<div>
+<div class="col-lg-6 col-lg-push-3 col-md-12">
+<div class="box box-info" style="border-top-color:#3c8dbc;">
+  
   <div class="box-header with-border">
-    <h3 class="box-title">Quick Example</h3>
+    <h3 class="box-title">Login</h3>
   </div>
   <!-- /.box-header -->
   <!-- form start -->
-  <form role="form">
+  <form class="form-horizontal" action="/login" method="post" role="form">
     <div class="box-body">
       <div class="form-group">
-        <label for="exampleInputEmail1">Email address</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+        <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+        
+        <div class="col-sm-10">
+          <input type="email" class="form-control" id="email" placeholder="Email">
+        </div>
       </div>
       <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-      </div>
-      <div class="form-group">
-        <label for="exampleInputFile">File input</label>
-        <input type="file" id="exampleInputFile">
-
-        <p class="help-block">Example block-level help text here.</p>
-      </div>
-      <div class="checkbox">
-        <label>
-          <input type="checkbox"> Check me out
-        </label>
+        <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+        
+        <div class="col-sm-10">
+          <input type="password" class="form-control" id="pasword" placeholder="Password">
+        </div>
       </div>
     </div>
     <!-- /.box-body -->
-
     <div class="box-footer">
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn btn-info pull-right">Sign in</button>
     </div>
+    <!-- /.box-footer -->
   </form>
+  
+</div>
 </div>
 {% endblock %}
