--- a/data_logger/templates/admin.html
+++ b/data_logger/templates/admin.html
@@ -19,7 +19,7 @@
                   {% for project in projects_ask_approval %}
                 <li class="item">
                   <div class="product-info">
-                    <a href="javascript:void(0)" class="product-title">{{project.name}}</a>
+                    <a href="/project/{{project.id}}" class="product-title">{{project.name}}</a>
                     <a class="label label-danger pull-right" href="/admin/reject/project/id">Reject</a>
                       <a class="label label-success pull-right" href="/admin/approve/project/id">Validate</a>
                       <span class="product-description">
