--- a/data_logger/templates/base.html
+++ b/data_logger/templates/base.html
@@ -122,8 +122,8 @@
       </span>
     </a>
     <ul class="treeview-menu" style="display: block;">
-      <li><a href="/app.py/admin"><i class="fa fa-wrench"></i> Projects</a></li>
-      <li><a href="/app.py/users"><i class="fa fa-wrench"></i> Users</a></li>
+      <li><a href="/app.py/admin/projects"><i class="fa fa-wrench"></i> Projects</a></li>
+      <li><a href="/app.py/admin/users"><i class="fa fa-wrench"></i> Users</a></li>
     </ul>
   </li> 
   {% endif %}
