--- a/data_logger/templates/base.html
+++ b/data_logger/templates/base.html
@@ -60,13 +60,12 @@
         <ul class="nav navbar-nav">
           <li class="dropdown user user-menu closed">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-              <img src="" class="user-image" alt="User Image">
-              <span class="hidden-xs">USER NAME</span>
+              <span class="hidden-xs">{{user_name}}</span>
             </a>
             <ul class="dropdown-menu">
               <!-- User image -->
               <li class="user-header">
-                <img src="" class="img-circle" alt="User Image">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/dc/Adolf_Hitler_cropped_restored.jpg/583px-Adolf_Hitler_cropped_restored.jpg" class="img-circle" alt="User Image">
 
                 <p>
                   TODO : user info
@@ -93,16 +92,6 @@
   <aside class="main-sidebar">
     <!-- sidebar: style can be found in sidebar.less -->
     <section class="sidebar">
-      <!-- Sidebar user panel -->
-      <div class="user-panel">
-        <div class="pull-left image">
-          <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-        </div>
-        <div class="pull-left info">
-		<p>{{user_name}}</p>
-          <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
-        </div>
-      </div>
 
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu" data-widget="tree">
@@ -125,7 +114,7 @@
       <li><a href="/app.py/admin/projects"><i class="fa fa-wrench"></i> Projects</a></li>
       <li><a href="/app.py/admin/users"><i class="fa fa-wrench"></i> Users</a></li>
     </ul>
-  </li> 
+  </li>
   {% endif %}
       </ul>
     </section>
