--- a/data_logger/templates/base.html
+++ b/data_logger/templates/base.html
@@ -65,7 +65,7 @@
             <ul class="dropdown-menu">
               <!-- User image -->
               <li class="user-header">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/dc/Adolf_Hitler_cropped_restored.jpg/583px-Adolf_Hitler_cropped_restored.jpg" class="img-circle" alt="User Image">
+                <img src="" class="img-circle" alt="User Image">
 
                 <p>
                   TODO : user info
