--- a/data_logger/templates/base.html
+++ b/data_logger/templates/base.html
@@ -65,8 +65,7 @@
             <ul class="dropdown-menu">
               <!-- User image -->
               <li class="user-header">
-                <img src="" class="img-circle" alt="User Image">
-
+                <img src="/static/img/user_icon.png" class="img-circle" alt="User Image">
                 <p>
                   TODO : user info
                 </p>
