remove icon from side bar

--- a/data_logger/templates/base.html
+++ b/data_logger/templates/base.html
@@ -110,8 +110,8 @@
       </span>
     </a>
     <ul class="treeview-menu" style="display: block;">
-      <li><a href="/app.py/admin/projects"><i class="fa fa-wrench"></i> Projects</a></li>
-      <li><a href="/app.py/admin/users"><i class="fa fa-wrench"></i> Users</a></li>
+      <li><a href="/app.py/admin/projects"><i class="fa"></i> Projects</a></li>
+      <li><a href="/app.py/admin/users"><i class="fa"></i> Users</a></li>
     </ul>
   </li>
   {% endif %}
