--- a/data_logger/templates/adminUsers.html
+++ b/data_logger/templates/adminUsers.html
@@ -19,15 +19,14 @@
             <div class="box-body">
               <ul class="products-list product-list-in-box">
 
-                      {% for project in projects_ask_sensor %}
+                {% for user in all_users %}
                 <li class="item">
                   <div class="product-info">
-                    <a href="javascript:void(0)" class="product-title">{{project.name}}</a>
-                    <a class="label label-danger pull-right" href="#">Reject</a>
-                      <a class="label label-success pull-right" href="#">Validate</a>
+                    <a href="javascript:void(0)" class="product-title">{{user.name}}</a>
+                    <a class="label label-success pull-right" data-target="#userEditModal">Edit User</a>
                     <span class="product-description">
-                          TODO
-                        </span>
+                      TODO
+                    </span>
                   </div>
                 </li>
 
@@ -74,7 +73,53 @@
                   </div>
                   <!-- /.box-body -->
                   <div class="box-footer">
-                    <button type="submit" class="btn btn-info pull-right">Sign in</button>
+                    <button type="submit" class="btn btn-info pull-right">Create</button>
+                  </div>
+                  <!-- /.box-footer -->
+                </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="modal fade" id="userEditModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel" style='display:initial;'>Edit user</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+            <div class="modal-body">
+                <form class="form-horizontal" action="/admin/add/user" method="post" role="form">
+                  <div class="box-body">
+                    <div class="form-group">
+                      <label for="email" class="col-sm-2 control-label">Email</label>
+
+                      <div class="col-sm-10">
+                        <input type="email" class="form-control" id="email" placeholder="Email">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="password" class="col-sm-2 control-label">Password</label>
+
+                      <div class="col-sm-10">
+                        <input type="password" class="form-control" id="pasword" placeholder="Password">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="password" class="col-sm-2 control-label">OtherData</label>
+
+                      <div class="col-sm-10">
+                        <input type="password" class="form-control" id="pasword" placeholder="Password">
+                      </div>
+                    </div>
+                  </div>
+                  <!-- /.box-body -->
+                  <div class="box-footer">
+                    <button type="submit" class="btn btn-info pull-right">Confirm changes</button>
+                    <button type="button" class="btn btn-default pull-right" data-dismiss="modal">Cancel</button>
                   </div>
                   <!-- /.box-footer -->
                 </form>
