--- a/data_logger/templates/adminUsers.html
+++ b/data_logger/templates/adminUsers.html
@@ -96,15 +96,15 @@
                   <div class="box-body">
                     <div class="form-group">
                       <label for="email" class="col-sm-2 control-label">Email</label>
-                      <input type="email" name="email" class="form-control" id="inputEmail" value="{{ user.email }}">
+                      <input type="email" name="email" class="form-control" id="inputEmail">
                     </div>
                     <div class="form-group">
                       <label for="name" class="col-sm-2 control-label">Name</label>
-                      <input type="email" name="email" class="form-control" id="name" value="{{ user.name }}">
+                      <input type="email" name="email" class="form-control" id="name">
                     </div>
                     <div class="form-group">
                       <label for="firstName" class="col-sm-2 control-label">First Name</label>
-                      <input type="text" name="text" class="form-control" id="firstName" value="{{ user.first_name }}">
+                      <input type="text" name="text" class="form-control" id="firstName">
                     </div>
                   </div>
                   <!-- /.box-body -->
