--- a/data_logger/templates/adminUsers.html
+++ b/data_logger/templates/adminUsers.html
@@ -81,8 +81,8 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <label>Privilieg Level</label>
-                      <select class="form-control select2 select2-hidden-accessible" name="admin_level" style="width: 100%;" tabindex="-1" aria-hidden="true">
+                      <label class="col-sm-2 control-label">Privilieg Level</label>
+                      <select class="col-sm-10 form-control select2 select2-hidden-accessible" name="admin_level" tabindex="-1" aria-hidden="true">
                         <option selected="selected">User</option>
                         <option>Creator</option>
                         <option>Admin</option>
@@ -131,8 +131,8 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <label>Privilieg Level</label>
-                      <select class="form-control select2 select2-hidden-accessible" name="admin_level" style="width: 100%;" tabindex="-1" aria-hidden="true">
+                      <label class="col-sm-2 control-label">Privilieg Level</label>
+                      <select class="col-sm-10 form-control select2 select2-hidden-accessible" name="admin_level" tabindex="-1" aria-hidden="true">
                         <option selected="selected">User</option>
                         <option>Creator</option>
                         <option>Admin</option>
