--- a/data_logger/templates/adminUsers.html
+++ b/data_logger/templates/adminUsers.html
@@ -82,11 +82,13 @@
                     </div>
                     <div class="form-group">
                       <label class="col-sm-2 control-label">Privilieg Level</label>
-                      <select class="col-sm-10 form-control select2 select2-hidden-accessible" name="admin_level" tabindex="-1" aria-hidden="true">
+                      <div class="col-sm-10 ">
+                      <select class="form-control select2 select2-hidden-accessible" name="admin_level" tabindex="-1" aria-hidden="true">
                         <option selected="selected">User</option>
                         <option>Creator</option>
                         <option>Admin</option>
                       </select>
+                      </div>
                     </div>
                   </div>
                   <!-- /.box-body -->
@@ -132,11 +134,13 @@
                     </div>
                     <div class="form-group">
                       <label class="col-sm-2 control-label">Privilieg Level</label>
-                      <select class="col-sm-10 form-control select2 select2-hidden-accessible" name="admin_level" tabindex="-1" aria-hidden="true">
-                        <option selected="selected">User</option>
-                        <option>Creator</option>
-                        <option>Admin</option>
-                      </select>
+                      <div class="col-sm-10 ">
+                          <select class="form-control select2 select2-hidden-accessible" name="admin_level" tabindex="-1" aria-hidden="true">
+                            <option selected="selected">User</option>
+                            <option>Creator</option>
+                            <option>Admin</option>
+                          </select>
+                      </div>
                     </div>
                   </div>
                   <!-- /.box-body -->
