correction users add

--- a/data_logger/templates/adminUsers.html
+++ b/data_logger/templates/adminUsers.html
@@ -54,7 +54,7 @@
             </button>
           </div>
             <div class="modal-body">
-                <form class="form-horizontal" action="/admin/add/user" method="post" role="form">
+                <form class="form-horizontal" action="/app.py/admin/add/user" method="post" role="form">
                   <div class="box-body">
                     <div class="form-group">
                       <label for="email" class="col-sm-2 control-label">Email</label>
