--- a/data_logger/templates/adminUsers.html
+++ b/data_logger/templates/adminUsers.html
@@ -75,9 +75,9 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <label for="firstName" class="col-sm-2 control-label">First Name</label>
+                      <label for="first_name" class="col-sm-2 control-label">First Name</label>
                       <div class="col-sm-10">
-                        <input type="text" name="firstName" class="form-control" name="firstName" placeholder="First Name">
+                        <input type="text" name="first_name" class="form-control" name="first_name" placeholder="First Name">
                       </div>
                     </div>
                     <div class="form-group">
@@ -127,9 +127,9 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <label for="firstName" class="col-sm-2 control-label">First Name</label>
+                      <label for="first_name" class="col-sm-2 control-label">First Name</label>
                       <div class="col-sm-10">
-                        <input type="text" name="firstName" class="form-control" id="firstName" placeholder="First Name">
+                        <input type="text" name="first_name" class="form-control" id="first_name" placeholder="First Name">
                       </div>
                     </div>
                     <div class="form-group">
