--- a/data_logger/templates/sensors.html
+++ b/data_logger/templates/sensors.html
@@ -58,11 +58,11 @@
             <form role="form" action="/app.py/project/{{id}}/client/{{TODO}}/add/sensor" method="post">
                 <div class="form-group">
                     <label for="sensorName">Sensor Name</label>
-                    <input type="text" class="form-control" id="sensorID" placeholder="Enter Sensor Name">
+                    <input type="text" name="sensor_name" class="form-control" id="sensorID" placeholder="Enter Sensor Name">
                 </div>
                 <div class="form-group">
                     <label>Sensor type</label>
-                    <select class="form-control select2 select2-hidden-accessible" onChange="refreshSelect()" style="width: 100%;" tabindex="-1" aria-hidden="true">
+                    <select class="form-control select2 select2-hidden-accessible" name="sensor_type" onChange="refreshSelect()" style="width: 100%;" tabindex="-1" aria-hidden="true">
                         <option value="null" disabled="disabled" selected="selected">Select a sensor</option>
                         {% for sensor in sensors_type %}
                         <option value="{{ sensor.id}}">{{ sensor.sensor_name }}</option>
@@ -72,7 +72,7 @@
 
                 <div class="form-group">
                     <label>Sensor selection</label>
-                    <select id="select-subtype" class="form-control select2 select2-hidden-accessible selectpicker" data-tickIcon="fa fa-ok" style="width: 100%;" tabindex="-1" aria-hidden="true" multiple='multiple'>
+                    <select id="select-subtype" name="sensor_subtype" class="form-control select2 select2-hidden-accessible selectpicker" data-tickIcon="fa fa-ok" style="width: 100%;" tabindex="-1" aria-hidden="true" multiple='multiple'>
                         <option disabled="disabled">Please select a sensor type</option>
                     </select>
                 </div>
@@ -80,7 +80,7 @@
 
                 <div class="form-group">
                     <label>Database storage rules</label>
-                    <select id="select-subtype" class="form-control select2 select2-hidden-accessible selectpicker" data-tickIcon="fa fa-ok" style="width: 100%;" tabindex="-1" aria-hidden="true" multiple='multiple'>
+                    <select id="select-subtype" name="sensor_freq" class="form-control select2 select2-hidden-accessible selectpicker" data-tickIcon="fa fa-ok" style="width: 100%;" tabindex="-1" aria-hidden="true" multiple='multiple'>
                         <option>60 seconds for 30 days</option>
                         <option>5 minutes for 12 months</option>
                         <option>30 minutes for 60 months</option>
