--- a/data_logger/templates/sensors.html
+++ b/data_logger/templates/sensors.html
@@ -21,11 +21,11 @@
                 </tr>
                 {% for sensor in sensors %}
                 <tr>
-                  <td>{{sensor.name}}</td>
+                  <td>{{sensor.sensor_name}}</td>
                   <td>
-                    {{sensor.type}}
+                    {{sensor.protocol}}
                   </td>
-                  <td>{{sensor.which}}</td>
+                  <td>{{sensor.sample_freq}}</td>
 
                   <td style="width:40px;"><button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-trash-o"></i>
                   </button></td>
@@ -35,8 +35,8 @@
             </div>
             <!-- /.box-body -->
             <div class="box-footer clearfix">
-              <a href="/app.py/projet/{{projet.id}}/client/{{client.id}}/add/sensor" class="btn btn-sm btn-info btn-flat pull-left">Add sensor</a>
-              <a href="/app.py/projet/{{projet.id}}/ask/sensor" class="btn btn-sm btn-info btn-flat pull-left">Ask for more sensors</a>
+              <button data-toggle="modal" data-target="#sensorModal" class="btn btn-sm btn-info btn-flat pull-left">Add sensor</button>
+              <a href="/app.py/project/{{project.id}}/ask/sensor" class="btn btn-sm btn-info btn-flat pull-left">Ask for more sensors</a>
               <div class="pull-right">{{ sensors|length }} sensors</div>
             </div>
           </div>
@@ -55,7 +55,7 @@
         </button>
       </div>
         <div class="modal-body">
-            <form role="form" action="/app.py/project/{{id}}/client/{{TODO}}/add/sensor" method="post">
+            <form role="form" action="/app.py/project/{{project.id}}/client/{{client.id}}/add/sensor" method="post">
                 <div class="form-group">
                     <label for="sensorName">Sensor Name</label>
                     <input type="text" name="sensor_name" class="form-control" id="sensorID" placeholder="Enter Sensor Name">
@@ -96,3 +96,24 @@
 </div>
 
 {% endblock %}
+
+{%block js %}
+<script>
+
+function refreshSelect()
+{
+    //$.post("/lol/",{sensor:'temp'},function(data){
+        var data = [{id:1,name:"temp"},{id:2,name:"rain"},{id:3,name:'pression'}];
+        var string = "";
+        for(var i =0;i<data.length;i++)
+        {
+            var o = data[i];
+            string+= "<option value='"+o.id+"'>"+o.name+"</option>";
+        }
+        console.log(string);
+        $("#select-subtype").html(string);
+        $('.selectpicker').selectpicker("refresh");
+    //})
+}
+</script>
+{%endblock %}
