added flash firmware for client

--- a/data_logger/templates/sensors.html
+++ b/data_logger/templates/sensors.html
@@ -36,7 +36,7 @@
             <!-- /.box-body -->
             <div class="box-footer clearfix">
               <button data-toggle="modal" data-target="#sensorModal" class="btn btn-sm btn-info btn-flat pull-left">Add sensor</button>
-              <a href="/app.py/project/{{project.id}}/ask/sensor" class="btn btn-sm btn-info btn-flat pull-left">Ask for more sensors</a>
+            <!--  <a href="/app.py/project/{{project.id}}/ask/sensor" class="btn btn-sm btn-info btn-flat pull-left">Ask for more sensors</a>-->
               <div class="pull-right">{{ sensors|length }} sensors</div>
             </div>
           </div>
