corrected sensors creation

--- a/data_logger/templates/project.html
+++ b/data_logger/templates/project.html
@@ -19,7 +19,7 @@
         </tr>
         {% for client in clients %}
         <tr>
-          <td><a href="/app.py/project/{{id}}/client/{{client.id}}" id="client-{{client.id}}">{{client.id}}</a></td>
+          <td><a href="/app.py/project/{{id}}/client/{{client.id}}" id="client-{{client.id}}">{{client.ip}}</a></td>
             <td><a href="/app.py/project/{{id}}/client/{{client.id}}/flash">Flash firmware</a></td>
 
         </tr>
