remove sensor corrected

--- a/data_logger/templates/sensors.html
+++ b/data_logger/templates/sensors.html
@@ -27,8 +27,8 @@
                   </td>
                   <td>{{sensor.sample_freq}}</td>
 
-                  <td style="width:40px;"><button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-trash-o"></i>
-                  </button></td>
+                  <td style="width:40px;"><a type="button" class="btn btn-box-tool" href="/project/{{project.id}}/client/{{client.id}}/remove/sensor/{{sensor.id}}"><i class="fa fa-trash-o"></i>
+                  </a></td>
                 </tr>
                 {% endfor %}
               </tbody></table>
@@ -62,9 +62,10 @@
                 </div>
                 <div class="form-group">
                     <label>Sensor type</label>
-                    <select class="form-control select2 select2-hidden-accessible selectpicker" name="sensor_type" onChange="refreshSelect()" style="width: 100%;" tabindex="-1" aria-hidden="true">
+                    <select class="form-control select2 select2-hidden-accessible" name="sensor_type" onChange="refreshSelect()" style="width: 100%;" tabindex="-1" aria-hidden="true">
+                        <option value="null" disabled="disabled" selected="selected">Select a sensor</option>
                         {% for sensor in sensors_type %}
-                        <option value="{{ sensor}}">{{ sensor }}</option>
+                        <option value="{{ sensor.id}}">{{ sensor.sensor_name }}</option>
                         {% endfor %}
                     </select>
                 </div>
@@ -72,10 +73,7 @@
                 <div class="form-group">
                     <label>Sensor selection</label>
                     <select id="select-subtype" name="sensor_subtype" class="form-control select2 select2-hidden-accessible selectpicker" data-tickIcon="fa fa-ok" style="width: 100%;" tabindex="-1" aria-hidden="true" multiple='multiple'>
-                        
-                        <option value="1">Temperature</option>
-                        <option value="2">Humidity</option>
-                        <option value="3">Pression</option>
+                        <option disabled="disabled">Please select a sensor type</option>
                     </select>
                 </div>
 
