--- a/data_logger/templates/sensors.html
+++ b/data_logger/templates/sensors.html
@@ -62,10 +62,9 @@
                 </div>
                 <div class="form-group">
                     <label>Sensor type</label>
-                    <select class="form-control select2 select2-hidden-accessible" name="sensor_type" onChange="refreshSelect()" style="width: 100%;" tabindex="-1" aria-hidden="true">
-                        <option value="null" disabled="disabled" selected="selected">Select a sensor</option>
+                    <select class="form-control select2 select2-hidden-accessible selectpicker" name="sensor_type" onChange="refreshSelect()" style="width: 100%;" tabindex="-1" aria-hidden="true">
                         {% for sensor in sensors_type %}
-                        <option value="{{ sensor.id}}">{{ sensor.sensor_name }}</option>
+                        <option value="{{ sensor.id}}">{{ sensor }}</option>
                         {% endfor %}
                     </select>
                 </div>
@@ -73,7 +72,9 @@
                 <div class="form-group">
                     <label>Sensor selection</label>
                     <select id="select-subtype" name="sensor_subtype" class="form-control select2 select2-hidden-accessible selectpicker" data-tickIcon="fa fa-ok" style="width: 100%;" tabindex="-1" aria-hidden="true" multiple='multiple'>
-                        <option disabled="disabled">Please select a sensor type</option>
+                        <option>Temperature</option>
+                        <option>Humidity</option>
+                        <option>Pression</option>
                     </select>
                 </div>
 
