bug name & admin level on profile

--- a/data_logger/templates/projects.html
+++ b/data_logger/templates/projects.html
@@ -61,7 +61,7 @@
         <div class="modal-body">
             <form role="form" action="/app.py/add/project" method="post">
                 <div class="form-group">
-                    <label for="name">name</label>
+                    <label for="name">Name</label>
                     <!-- TODO éventuellement changer  l'id en 'email'-->
                     <input type="text" class="form-control" id="name" name="name" placeholder="Enter name">
                 </div>
