--- a/data_logger/templates/base.html
+++ b/data_logger/templates/base.html
@@ -67,7 +67,7 @@
               <li class="user-header">
                 <img src="/static/img/user_icon.png" class="img-circle" alt="User Image">
                 <p>
-                  TODO : user info
+                  {{user_privilege}}
                 </p>
               </li>
 
