--- a/data_logger/templates/login.html
+++ b/data_logger/templates/login.html
@@ -14,14 +14,15 @@
         <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
 
         <div class="col-sm-10">
-          <input type="email" class="form-control" id="email" placeholder="Email">
+          <input type="email" class="form-control" id="email" name="email" placeholder="Email">
         </div>
       </div>
       <div class="form-group">
         <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
 
         <div class="col-sm-10">
-          <input type="password" class="form-control" id="pasword" placeholder="Password">
+          <input type="password" class="form-control" id="pasword" name="password" 
+placeholder="Password">
         </div>
       </div>
     </div>
