--- a/data_logger/templates/adminUsers.html
+++ b/data_logger/templates/adminUsers.html
@@ -27,10 +27,10 @@
                     <span class="product-description">
                       {{user.first_name}}
                     </span>
-                    <span>
+                    <span class="product-description">
                       {{user.email}}
                     </span>
-                    <span>
+                    <span class="product-description">
                       {% if user.admin_level == 0 %}
                       User
                       {% elif user.admin_level == 1 %}
