--- a/data_logger/templates/login.html
+++ b/data_logger/templates/login.html
@@ -2,24 +2,24 @@
 {% block body %}
 <div class="col-lg-6 col-lg-push-3 col-md-12">
 <div class="box box-info" style="border-top-color:#3c8dbc;">
-  
+
   <div class="box-header with-border">
     <h3 class="box-title">Login</h3>
   </div>
   <!-- /.box-header -->
   <!-- form start -->
-  <form class="form-horizontal" action="/login" method="post" role="form">
+  <form class="form-horizontal" action="/app.py/login" method="post" role="form">
     <div class="box-body">
       <div class="form-group">
         <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-        
+
         <div class="col-sm-10">
           <input type="email" class="form-control" id="email" placeholder="Email">
         </div>
       </div>
       <div class="form-group">
         <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-        
+
         <div class="col-sm-10">
           <input type="password" class="form-control" id="pasword" placeholder="Password">
         </div>
@@ -31,7 +31,7 @@
     </div>
     <!-- /.box-footer -->
   </form>
-  
+
 </div>
 </div>
 {% endblock %}
