started the flash

--- a/data_logger/templates/sensors.html
+++ b/data_logger/templates/sensors.html
@@ -73,9 +73,9 @@
                 <div class="form-group">
                     <label>Sensor selection</label>
                     <select id="select-subtype" name="sensor_subtype" class="form-control select2 select2-hidden-accessible selectpicker" data-tickIcon="fa fa-ok" style="width: 100%;" tabindex="-1" aria-hidden="true" multiple='multiple'>
-                        <option>Temperature</option>
-                        <option>Humidity</option>
-                        <option>Pression</option>
+                        <option vqlue="temperature">Temperature</option>
+                        <option value="humidity">Humidity</option>
+                        <option value="pressure">Pressure</option>
                     </select>
                 </div>
 
