--- a/data_logger/templates/profile.html
+++ b/data_logger/templates/profile.html
@@ -8,7 +8,7 @@
         </div>
         <!-- /.box-header -->
         <!-- form start -->
-        <form action="/profile" method="post" role="form">
+        <form action="/app.py/profile" method="post" role="form">
           <div class="box-body">
             <div class="form-group">
               <label for="userName">Name</label>
